@@ -19,25 +19,36 @@ see INSTALL for installation instructions
 Specific Acknowledgments:
 
 * Thanks to Ralf Grosse-Kunstleve for his contribution of the "sglite"
-space group and symmetry handling module.
+  space group and symmetry handling module.
 
 * Thanks to the scientists and management of Sunesis Pharmaceuticals 
-for supporting PyMOL development since its inception.
+  for supporting PyMOL development since its inception.
 
-* Thanks to the Computational Crystallography Initiative developers
-for their encouragement, ideas, and support. 
+* Thanks to the Computational Crystallography Initiative (LBNL) 
+  developers for their encouragement, ideas, and support. 
+
+* Thanks to Scott Walsh for being the first individual to provide 
+  financial support for PyMOL.  
+
+* Thanks to the anonymous pharmacetical companies who have provided 
+  financial support for hardware and development expenses (you know
+  who you are).
 
 * Thanks to Brian Paul and the Precision Insight team for development
-of Mesa/DRI which greatly assisted in the early development of PyMOL.
+  of Mesa/DRI which greatly assisted in the early development of PyMOL.
 
 * Thanks to Michael Love for the first major outside port of PyMOL
-(to GNU-Darwin/OSX) and for believing in the cause.
+  (to GNU-Darwin/OSX) and for believing in the cause.  
 
 * Thanks for Paul Sherwood for making a concerted effort to develop 
-using PyMOL long before the software and vision had matured.
+  using PyMOL long before the software and vision had matured.
+
+* Thanks to Jay Ponder for thoughtful email discussions on Tinker and
+  the role of open-source scientific software.
 
 * Thanks to hundreds of PyMOL users for the many forms of feedback,
-bug sightings, and encouragement they've provided.
+  bug sightings, and encouragement they've provided.
+
 ----------------------------------------------------------------------
 The PyMOL Team:
 
@@ -51,16 +62,21 @@ The PyMOL Team:
    
    Other Authors and Contributors:
 
+      Paul Adams
       Stephen Adler
+      Jun Aishima
       Huub van Dam
       Peter Haebel
       Uwe Hoffmann
       Andrey Khavryuchenko
       Michael Love
+      Nigel Moriarty
       Andre Padilla
       Ezequiel "Zac" Panepucci
+      Michael Randel
       Paul Sherwood
       Scott Walsh
+      Chris Wiesmann
 
    Miscellaneous Code Snippets Lifted From:
 
